--- a/prometheus/recording.rules.yml
+++ b/prometheus/recording.rules.yml
@@ -1,6 +1,6 @@
-groups:
-  - name: events
-    interval: 15s
-    rules:
-      - record: <rule-record>
-        expr: <rule-expr>
+# groups:
+#   - name: events
+#     interval: 15s
+#     rules:
+#       - record: <rule-record>
+#         expr: <rule-expr>
