--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,3 +11,7 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: django
+    scrape_interval: 30s
+    static_configs:
+      - targets: ['partak-backend:10000']
