--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,6 +12,7 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
   - job_name: django
+    scheme: https
     scrape_interval: 30s
     metrics_path: /prometheus/metrics
     static_configs:
