--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -13,7 +13,7 @@ scrape_configs:
       - targets: ['localhost:9090']
   - job_name: django
     scheme: https
-    scrape_interval: 30s
+    scrape_interval: 2m
     metrics_path: /prometheus/metrics
     static_configs:
       - targets: ['partak-backend.onrender.com:9090']
